tests/NormalTests/paczka1/fuzzy1/76800526.err
Error in line 1: Ycu S4Y2 57,5
Error in line 2: Ycu S482 -3,1
Error in line 4: S22 S106 87,4
Error in line 15: Y74DxG SM06 84,3
Error in line 14: Ycu S106 27,6
Error in line 23: Y74DxG S106 389,5
Error in line 34: tudmiq2evr S482 71,1
